// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a checked checkbox 1`] = `
<td
  className="permission-column text-center text-middle selected"
>
  <Checkbox
    checked={true}
    disabled={false}
    id="baz"
    label="checked permission 'Baz' for user 'Baz'"
    onCheck={[MockFunction]}
    thirdState={false}
  />
</td>
`;

exports[`should display a disabled checkbox 1`] = `
<td
  className="permission-column text-center text-middle"
>
  <Checkbox
    checked={true}
    disabled={true}
    id="baz"
    label="disabled permission 'Baz' for user 'Baz'"
    onCheck={[MockFunction]}
    thirdState={false}
  />
</td>
`;

exports[`should display an unchecked checkbox 1`] = `
<td
  className="permission-column text-center text-middle"
>
  <Checkbox
    checked={false}
    disabled={false}
    id="bar"
    label="unchecked permission 'Baz' for user 'Baz'"
    onCheck={[MockFunction]}
    thirdState={false}
  />
</td>
`;

exports[`should display multiple checkboxes with one checked 1`] = `
<td
  className="text-middle"
>
  <div
    key="foo"
  >
    <Checkbox
      checked={false}
      disabled={false}
      id="foo"
      label="unchecked permission 'Foo' for user 'Baz'"
      onCheck={[MockFunction]}
      thirdState={false}
    >
      <span
        className="little-spacer-left"
      >
        Foo
      </span>
    </Checkbox>
  </div>
  <div
    key="baz"
  >
    <Checkbox
      checked={true}
      disabled={false}
      id="baz"
      label="checked permission 'Baz' for user 'Baz'"
      onCheck={[MockFunction]}
      thirdState={false}
    >
      <span
        className="little-spacer-left"
      >
        Baz
      </span>
    </Checkbox>
  </div>
</td>
`;
